# spider

./: README.md  pyproject.toml
examples/: run_mjwp_fast.py
examples/config/: default.yaml
examples/config/override/: oakinkv2.yaml  oakinkv2_fast.yaml
scripts/: run_oakinkv2_pipeline.sh
spider/: config.py
spider/preprocess/: decompose_fast.py  generate_xml.py  ik.py  ik_fast.py
spider/process_datasets/: oakinkv2.py
